# training-langchain-basics-1day

./: .env.template  .gitignore  Makefile  README.md  pyproject.toml
.devcontainer/: compose.yaml  devcontainer.json  post_create.sh
chapter01/: 02_openai_chat_api.ipynb  03_prompt_engineering.ipynb  chat_cli.py  llm_app_basics.ipynb
chapter02/: 01_langchain_basics.ipynb  02_rag_basics.ipynb  langchain_and_rag_basics.ipynb  lcel_deep_dive.ipynb
chapter03/: app.py
chapter03/pages/: 01_indexing.py  02_rag.py  indexing.py
chapter03_customize/pages/: rag.py
chapter03_step_by_step/01_01_hello_streamlit/: app.py
chapter03_step_by_step/01_02_chat_input/: app.py
chapter03_step_by_step/01_03_show_input_and_output/: app.py
chapter03_step_by_step/01_04_show_history/: app.py
chapter03_step_by_step/01_05_call_llm/: app.py
chapter03_step_by_step/01_06_stream/: app.py
chapter03_step_by_step/02_01_indexing_page/pages/: indexing.py
chapter03_step_by_step/02_02_indexing_implementation/pages/: indexing.py
chapter03_step_by_step/02_03_rag_page/pages/: rag.py
docs/: 01_setup.md  azure_opneai.md  setup.md
