[project]
name = "langchain-basics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain-chroma==0.1.2",
    "langchain-community==0.2.12",
    "langchain-core==0.2.30",
    "langchain-openai==0.1.21",
    "langchain-text-splitters==0.2.2",
    "langgraph==0.2.16",
    "openai==1.40.6",
    "protobuf==3.20.3",
    "python-dotenv==1.0.1",
    "streamlit==1.38.0",
]

[tool.uv]
dev-dependencies = [
    "jupyter==1.1.1",
]
